# scout-soroban

./: .gitignore  404.html  Makefile  README.md  about.html  acknowledgements.html  blog.html  index.html  markdown-page.html  sitemap.xml
detectors/: Cargo.toml  README.md  rust-toolchain
detectors/assert-violation/: Cargo.toml
detectors/assert-violation/src/: lib.rs
detectors/avoid-core-mem-forget/: Cargo.toml  README.md
detectors/avoid-core-mem-forget/src/: lib.rs
detectors/avoid-panic-error/: Cargo.toml
detectors/avoid-panic-error/src/: README.md  lib.rs
detectors/avoid-unsafe-block/: Cargo.toml  README.md
detectors/avoid-unsafe-block/src/: lib.rs
detectors/core-mem-forget/: Cargo.toml
detectors/core-mem-forget/src/: lib.rs
detectors/coverage-detector/: Cargo.toml
detectors/coverage-detector/src/: lib.rs
detectors/divide-before-multiply/: Cargo.toml  README.md
detectors/divide-before-multiply/src/: lib.rs
detectors/dos-unbounded-operation/: Cargo.toml  README.md
detectors/dos-unbounded-operation/src/: lib.rs
detectors/dos-unexpected-revert-with-vector/: Cargo.toml
detectors/dos-unexpected-revert-with-vector/src/: lib.rs
detectors/dynamic-instance-storage/src/: lib.rs
detectors/dynamic-storage/: Cargo.toml
detectors/dynamic-storage/src/: lib.rs
detectors/front-running/: Cargo.toml
detectors/front-running/src/: conditional_checker.rs  lib.rs
detectors/incorrect-exponentiation/: Cargo.toml
detectors/incorrect-exponentiation/src/: lib.rs
detectors/insufficiently-random-values/: Cargo.toml  README.md
detectors/insufficiently-random-values/src/: lib.rs
detectors/integer-overflow-or-underflow/: Cargo.toml
detectors/integer-overflow-or-underflow/src/: lib.rs
detectors/iterators-over-indexing/: Cargo.toml
detectors/iterators-over-indexing/src/: lib.rs
detectors/overflow-check/: Cargo.toml  README.md
detectors/overflow-check/src/: lib.rs
detectors/set-contract-storage/: Cargo.toml  README.md
detectors/set-contract-storage/src/: lib.rs
detectors/soroban-version/: Cargo.toml
detectors/soroban-version/src/: lib.rs
detectors/storage-change-events/: Cargo.toml
detectors/storage-change-events/src/: lib.rs
detectors/test-hashmap/: Cargo.toml
detectors/test-hashmap/src/: lib.rs
detectors/test-unsafe-unwrap/: Cargo.toml
detectors/test-unsafe-unwrap/src/: lib.rs
detectors/token-interface-events/: Cargo.toml
detectors/token-interface-events/src/: lib.rs
detectors/token-interface-inference/: Cargo.toml
detectors/token-interface-inference/src/: lib.rs
detectors/unnecessary-admin-parameter/: Cargo.toml
detectors/unnecessary-admin-parameter/src/: lib.rs
detectors/unnecessary-lint-allow/: Cargo.toml
detectors/unnecessary-lint-allow/src/: lib.rs  processor.rs  types.rs
detectors/unprotected-mapping-operation/: Cargo.toml
detectors/unprotected-mapping-operation/src/: lib.rs
detectors/unprotected-update-current-contract-wasm/: Cargo.toml
detectors/unprotected-update-current-contract-wasm/src/: lib.rs
detectors/unrestricted-transfer-from/: Cargo.toml
detectors/unrestricted-transfer-from/src/: lib.rs
detectors/unsafe-block/: Cargo.toml
detectors/unsafe-block/src/: lib.rs
detectors/unsafe-expect/: Cargo.toml  README.md
detectors/unsafe-expect/src/: lib.rs
detectors/unsafe-map-get/: Cargo.toml
detectors/unsafe-map-get/src/: lib.rs
detectors/unsafe-unwrap/: Cargo.toml  README.md
detectors/unsafe-unwrap/src/: lib.rs
detectors/unused-return-enum/: Cargo.toml  README.md
detectors/unused-return-enum/src/: lib.rs
detectors/vec-could-be-mapping/: Cargo.toml
detectors/vec-could-be-mapping/src/: lib.rs
detectors/verify-transfer/: Cargo.toml
detectors/verify-transfer/src/: lib.rs
detectors/zero-address/: Cargo.toml
detectors/zero-address/src/: lib.rs
scout-audit-internal/: Cargo.toml
scout-audit-internal/src/: detector.rs
scout-audit-internal/src/detector/: lint_message.rs
test-cases/: Cargo.toml  README.md
test-cases/assert-violation/: Cargo.toml
test-cases/assert-violation/remediated-example/: lib.rs
test-cases/assert-violation/vulnerable-example/: Cargo.toml  lib.rs
test-cases/avoid-core-mem-forget/: Cargo.toml
test-cases/avoid-panic-error/: Cargo.toml
test-cases/avoid-unsafe-block/: Cargo.toml
test-cases/coverage-detector/: Cargo.toml
test-cases/divide-before-multiply/: Cargo.toml
test-cases/divide-before-multiply/divide-before-multiply-1/: Cargo.toml
test-cases/divide-before-multiply/divide-before-multiply-2/: Cargo.toml
test-cases/dos-unbounded-operation/: Cargo.toml
test-cases/dos-unexpected-revert-with-vector/: Cargo.toml
test-cases/dos-unexpected-revert-with-vector/remediated-example/: Cargo.toml  lib.rs
test-cases/dos-unexpected-revert-with-vector/vulnerable-example/: Cargo.toml  lib.rs
test-cases/dynamic-instance-storage/: Cargo.toml
test-cases/dynamic-storage/: Cargo.toml
test-cases/front-running/: Cargo.toml
test-cases/incorrect-exponentiation/: Cargo.toml
test-cases/insufficiently-random-values/: Cargo.toml
test-cases/integer-overflow-or-underflow/: Cargo.toml
test-cases/iterators-over-indexing/: Cargo.toml
test-cases/overflow-check/: Cargo.toml
test-cases/set-contract-storage/: Cargo.toml
test-cases/soroban-version/: Cargo.toml
test-cases/storage-change-events/: Cargo.toml
test-cases/token-interface-events/: Cargo.toml
test-cases/token-interface-inference/: Cargo.toml
test-cases/unnecessary-admin-parameter/: Cargo.toml
test-cases/unnecessary-lint-allow/: Cargo.toml
test-cases/unprotected-mapping-operation/: Cargo.toml
test-cases/unprotected-update-current-contract-wasm/: Cargo.toml
test-cases/unrestricted-transfer-from/: Cargo.toml
test-cases/unrestricted-transfer-from/remediated-example/: lib.rs
test-cases/unsafe-expect/: Cargo.toml
test-cases/unsafe-map-get/: Cargo.toml
test-cases/unsafe-unwrap/: Cargo.toml
test-cases/unused-return-enum/: Cargo.toml
test-cases/vec-could-be-mapping/: Cargo.toml
test-cases/verify-transfer/: Cargo.toml
test-cases/zero-address/: Cargo.toml
(+816 files in other folders)
