[workspace]
exclude = [".cargo", "target", ".vscode"]
members = ["*"]
resolver = "2"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "51a1cf0" }
clippy_wrappers = { package = "scout-audit-clippy-wrappers", git = "https://github.com/CoinFabrik/scout-audit/", rev = "af3ef9c298b46ea46a01c00d385e6b2326c9b5bb" }
common = { path = "common" }
dylint_linting = { package = "scout-audit-dylint-linting", git = "https://github.com/CoinFabrik/scout-audit/", rev = "6d6819a" }
if_chain = "=1.0.2"
itertools = { version = "=0.13" }
utils = { path = "../utils" }
