[package]
name = "scout-audit-internal"
version = "0.2.1"
edition = "2021"
authors = [
    "José García Crosta <jose.garcia.crosta@coinfabrik.com>",
    "Facundo Lerena <facundo.lerena@coinfabrik.com>",
    "Agustin Losiggio <agustin.losiggio@coinfabrik.com>",
    "Matias Cabello <matias.cabello@coinfabrik.com>",
    "Ariel Waissbein <ariel.waissbein@coinfabrik.com",
    "Arturo Beccar-Varela <arturo.beccar@coinfabrik.com>",
]
license = "MIT"
description = "Scout is an extensible open-source tool intended to assist soroban smart contract developers and auditors detect common security issues and deviations from best practices."
homepage = "https://github.com/CoinFabrik/scout-soroban"
repository = "https://github.com/CoinFabrik/scout-soroban"
readme = "../README.md"
keywords = ["auditor", "rust", "security", "soroban", "stellar", "smart-contracts"]
categories = ["development-tools", "command-line-utilities"]

[features]
detector = ["dep:strum"]
lint_helper = [
#    "dep:scout-audit-clippy-utils",
    "dep:serde_json"
]

[dependencies]
strum = { version = "0.25", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "7671c283a50b5d1168841f3014b14000f01dd204" }
#scout-audit-clippy-utils = { version = "=0.2.1", path = "../scout-audit-clippy-utils", optional = true }
