[package]
edition = "2021"
name = "avoid-core-mem-forget"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
dylint_linting = { workspace = true }
clippy_wrappers = { workspace = true }
if_chain = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
