[package]
edition = "2021"
name = "insufficiently-random-values"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = { workspace = true }
if_chain = { workspace = true }
scout-audit-clippy-utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
