[package]
edition = "2021"
name = "overflow-check"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
if_chain = { workspace = true }
scout-audit-dylint-linting = { workspace = true }
toml = "0.8.8"

[package.metadata.rust-analyzer]
rustc_private = true
