[package]
edition = "2021"
name = "overflow-check"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
clippy_wrappers = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }
toml = "0.8.8"

[package.metadata.rust-analyzer]
rustc_private = true
