[package]
name = "set-contract-storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = { workspace = true }
if_chain = { workspace = true }
utils = { path = "../../utils" }

scout-audit-clippy-utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
