[package]
edition = "2021"
name = "soroban-version"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
dylint_linting = { workspace = true }
semver = "1.0.4"
serde_json = "1.0"
ureq = { version = "2.7.1", features = ["json"] }

[package.metadata.rust-analyzer]
rustc_private = true
