[package]
edition = "2021"
name = "unnecessary-lint-allow"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }
serde = { version = "1", features = ["derive"] }
utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
