[package]
edition = "2021"
name = "unprotected-update-current-contract-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
dylint-linting = { workspace = true }
if_chain = { workspace = true }
utils = { path = "../../utils" }

[package.metadata.rust-analyzer]
rustc_private = true
