[package]
name = "vec-could-be-mapping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = { workspace = true }
if_chain = { workspace = true }
itertools = { workspace = true }
scout-audit-clippy-utils = { workspace = true }
utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
