[package]
edition = "2021"
name = "vec-could-be-mapping"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { workspace = true }
clippy_wrappers = { workspace = true }
dylint_linting = { workspace = true }
if_chain = { workspace = true }
itertools = { workspace = true }
utils = { workspace = true }

[package.metadata.rust-analyzer]
rustc_private = true
