[workspace]
exclude = [".cargo", "target"]
members = ["integer-overflow-or-underflow-*/*"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "=21.3.0" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"

[workspace.metadata.dylint]
libraries = [{ path = "/Users/josegarcia/Desktop/coinfabrik/scout-soroban/detectors/integer-overflow-or-underflow" }]
