[workspace]
exclude = [".cargo", "target"]
members = ["token-interface-inference-*/*"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "=21.4.0" }
soroban-token-sdk = { version = "21.4.0" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"


[workspace.metadata.dylint]
libraries = [
    { path="/home/sofia/Documentos/scout/scout-soroban/detectors/token-interface-inference" },
]
