[workspace]
exclude = [".cargo", "target"]
members = ["verify-transfer-*/*"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "=20.3.2" }
soroban-token-sdk = { version = "20.3.1" }

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
debug-assertions = true
inherits = "release"


[workspace.metadata.dylint]
libraries = [
    { path="/home/sofia/Documentos/cf/scout-soroban/detectors/verify-transfer" },
]
