[package]
name = "unexpected_revert"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "lib.rs" 

[dependencies]
soroban-sdk = "=20.0.0"

[dev_dependencies]
soroban-sdk = { version = "=20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.metadata.dylint]
libraries = [
    { path="/home/sofiazcoaga/scout-soroban/detectors/dos-unexpected-revert-with-vector" },
]